新增视频，图片接口
