# backend/views/user-address/index.php
@@ -3,6 +3,7 @@
 use yii\helpers\Html;
 use yii\grid\GridView;
 use yii\widgets\Pjax;
+
 /* @var $this yii\web\View */
 /* @var $searchModel common\models\UserAddressSearch */
 /* @var $dataProvider yii\data\ActiveDataProvider */
@@ -12,32 +13,33 @@ $this->params['breadcrumbs'][] = $this->title;
 ?>
 <div class="user-address-index">
 
-    <h1><?= Html::encode($this->title) ?></h1>
     <?php // echo $this->render('_search', ['model' => $searchModel]); ?>
 
     <p>
         <?= Html::a('Create User Address', ['create'], ['class' => 'btn btn-success']) ?>
     </p>
-<?php Pjax::begin(); ?>    <?= GridView::widget([
+    <?php Pjax::begin(); ?>    <?= GridView::widget([
         'dataProvider' => $dataProvider,
         'filterModel' => $searchModel,
         'columns' => [
             ['class' => 'yii\grid\SerialColumn'],
-
             'id',
-            'name',
+            'user_name',
             'user_id',
-            'lng',
-            'lat',
+            //'lng',
+            //'lat',
             // 'province_id',
             // 'city_id',
             // 'area_id',
             // 'default_address',
             // 'status',
+            'telephone',
+            'str_address',
+            'detail_address',
             // 'created_at',
             // 'updated_at',
 
             ['class' => 'yii\grid\ActionColumn'],
         ],
     ]); ?>
-<?php Pjax::end(); ?></div>
+    <?php Pjax::end(); ?></div>
